[package]
name = "roam"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
image = "0.24"
wgpu = "0.19"
cosmic-text = "0.10"
font-kit = "0.12"
cssparser = "0.33"
selectors = "0.25"
taffy = "0.3"
quick-xml = "0.31"
cpal = "0.15"
symphonia = "0.5"
wasmer = "4"
oxc_parser = "0.5"
hyper = "1"
hyper-tls = "0.6"
cookie = "0.18"
smol = "2"
smol-hyper = "0.1"
smol-macros = "0.1"
macro_rules_attribute = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
